[tool.poetry]
name = "llm-parse"
version = "0.1.0"
description = "Parse data from documents optimised for downstream llm tasks."
authors = ["tanchangsheng <tancs1994@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
